fixes hbs lint errors

--- a/ui/app/templates/components/database-role-edit.hbs
+++ b/ui/app/templates/components/database-role-edit.hbs
@@ -119,7 +119,7 @@
                 data-test-secret-save
                 type="submit"
                 disabled={{this.loading}}
-                class="button is-primary {{if this.loading "is-loading"}}"
+                class="button is-primary {{if this.loading 'is-loading'}}"
               >
                 {{#if (eq @mode "create")}}
                   Create role
