--- a/ui/app/templates/components/generated-item.hbs
+++ b/ui/app/templates/components/generated-item.hbs
@@ -72,7 +72,7 @@
         <button
           type="submit"
           data-test-save-config="true"
-          class="button is-primary {{if this.saveModel.isRunning "loading"}}"
+          class="button is-primary {{if this.saveModel.isRunning 'loading'}}"
           disabled={{or this.saveModel.isRunning this.isFormInvalid}}
         >
           Save
