--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -10,7 +10,7 @@
           spellcheck="false"
           data-test-secret-path="true"
           id="kv-key"
-          class="input {{if (get this.validationMessages "path") "has-error-border"}}"
+          class="input {{if (get this.validationMessages 'path') 'has-error-border'}}"
           @value={{get @modelForData @modelForData.pathAttr}}
           {{on "keyup" (perform this.waitForKeyUp "path" value="target.value")}}
         />
