--- a/ui/app/templates/components/secret-edit-toolbar.hbs
+++ b/ui/app/templates/components/secret-edit-toolbar.hbs
@@ -58,7 +58,7 @@
                 <li class="action">
                   {{#if this.showWrapButton}}
                     <button
-                      class="link link-plain has-text-weight-semibold is-ghost {{if this.isWrapping "is-loading"}}"
+                      class="link link-plain has-text-weight-semibold is-ghost {{if this.isWrapping 'is-loading'}}"
                       type="button"
                       {{on "click" this.handleWrapClick}}
                       data-test-wrap-button
