--- a/ui/app/templates/components/secret-version-menu.hbs
+++ b/ui/app/templates/components/secret-version-menu.hbs
@@ -36,7 +36,7 @@
         {{/each}}
         <li class="action">
           <SecretLink
-            @data-test-version-history
+            @data-test-version-history={{true}}
             @mode="versions"
             @secret={{@model.id}}
             @class="has-text-black has-text-weight-semibold has-bottom-shadow"
