--- a/ui/app/templates/components/transit-form-create.hbs
+++ b/ui/app/templates/components/transit-form-create.hbs
@@ -124,7 +124,7 @@
         data-test-transit-key-create
         type="submit"
         disabled={{@requestInFlight}}
-        class="button is-primary {{if @requestInFlight "is-loading"}}"
+        class="button is-primary {{if @requestInFlight 'is-loading'}}"
       >
         Create encryption key
       </button>
