--- a/ui/app/templates/vault/cluster/init.hbs
+++ b/ui/app/templates/vault/cluster/init.hbs
@@ -206,7 +206,7 @@
           <button
             data-test-init-submit
             type="submit"
-            class="button is-primary {{if this.loading "is-loading"}}"
+            class="button is-primary {{if this.loading 'is-loading'}}"
             disabled={{this.loading}}
           >
             Initialize
