--- a/ui/app/templates/vault/cluster/secrets/backend/sign.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/sign.hbs
@@ -122,7 +122,7 @@
         <button
           type="submit"
           disabled={{this.loading}}
-          class="button is-primary {{if this.loading "is-loading"}}"
+          class="button is-primary {{if this.loading 'is-loading'}}"
           data-test-secret-generate={{true}}
         >
           Sign
