--- a/ui/app/templates/vault/cluster/secrets/backend/versions.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/versions.hbs
@@ -83,7 +83,7 @@
             <ul class="menu-list">
               <li class="action">
                 <SecretLink
-                  @data-test-version
+                  @data-test-version={{true}}
                   @mode="show"
                   @secret={{this.model.id}}
                   @class="has-text-black has-text-weight-semibold"
