--- a/ui/app/templates/vault/cluster/secrets/backend/overview.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/overview.hbs
@@ -25,7 +25,7 @@
   </div>
 {{else}}
   <div class="box is-fullwidth is-shadowless has-tall-padding">
-    <div class="selectable-card-container {{if (and (eq this.model.connections 403) (eq this.model.roles 403)) "one-card"}}">
+    <div class="selectable-card-container {{if (and (eq this.model.connections 403) (eq this.model.roles 403)) 'one-card'}}">
       {{#if this.model.connectionCapabilities.canList}}
         <SelectableCard
           @cardTitle="Connections"
