glimmerizes toolbar-link component and removes data-test args

--- a/ui/app/templates/components/generated-item.hbs
+++ b/ui/app/templates/components/generated-item.hbs
@@ -45,7 +45,7 @@
       <div class="toolbar-separator"></div>
       <ToolbarLink
         @params={{array "vault.cluster.access.method.item.edit" this.itemType this.model.id}}
-        @data-test-configure-link="true"
+        data-test-configure-link="true"
       >
         Edit
         {{singularize this.itemType}}
