--- a/ui/app/templates/components/secret-edit-toolbar.hbs
+++ b/ui/app/templates/components/secret-edit-toolbar.hbs
@@ -98,14 +98,14 @@
               @model.id
               (query-params version=(if @model.canReadMetadata @modelForData.version ""))
             }}
-            @data-test-secret-edit="true"
+            data-test-secret-edit="true"
             @replace={{true}}
             @type="add"
           >
             Create new version
           </ToolbarLink>
         {{else}}
-          <ToolbarLink @params={{array targetRoute @model.id}} @data-test-secret-edit="true" @replace={{true}}>
+          <ToolbarLink @params={{array targetRoute @model.id}} data-test-secret-edit="true" @replace={{true}}>
             Edit secret
           </ToolbarLink>
         {{/if}}
