--- a/ui/app/templates/vault/cluster/policies/index.hbs
+++ b/ui/app/templates/vault/cluster/policies/index.hbs
@@ -44,7 +44,7 @@
       </ToolbarFilters>
     {{/if}}
     <ToolbarActions>
-      <ToolbarLink @type="add" @params={{array "vault.cluster.policies.create"}} @data-test-policy-create-link={{true}}>
+      <ToolbarLink @type="add" @params={{array "vault.cluster.policies.create"}} data-test-policy-create-link={{true}}>
         Create
         {{uppercase this.policyType}}
         policy
