glimmerizes toolbar-secret-link and secret-link components and removes data-test and class args

--- a/ui/app/templates/components/database-role-edit.hbs
+++ b/ui/app/templates/components/database-role-edit.hbs
@@ -52,7 +52,7 @@
           @mode="edit"
           @replace={{true}}
           @queryParams={{query-params itemType="role"}}
-          @data-test-edit-link={{true}}
+          data-test-edit-link={{true}}
         >
           Edit role
         </ToolbarSecretLink>
@@ -145,7 +145,7 @@
             {{/if}}
           </div>
           <div class="control">
-            <SecretLink @mode="list" @class="button">
+            <SecretLink @mode="list" class="button">
               Cancel
             </SecretLink>
           </div>
