--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -139,7 +139,7 @@
         </button>
       </div>
       <div class="control">
-        <SecretLink @mode="list" @secret={{@model.parentKey}} @class="button">
+        <SecretLink @mode="list" @secret={{@model.parentKey}} class="button">
           Cancel
         </SecretLink>
       </div>
