--- a/ui/app/templates/components/transit-form-create.hbs
+++ b/ui/app/templates/components/transit-form-create.hbs
@@ -130,7 +130,7 @@
       </button>
     </div>
     <div class="control">
-      <SecretLink @mode="list" @class="button">
+      <SecretLink @mode="list" class="button">
         Cancel
       </SecretLink>
     </div>
