--- a/ui/app/templates/components/transit-form-edit.hbs
+++ b/ui/app/templates/components/transit-form-edit.hbs
@@ -92,7 +92,7 @@
         </div>
       {{/if}}
       <div class="control">
-        <SecretLink @mode="show" @secret={{@key.id}} @class="button">
+        <SecretLink @mode="show" @secret={{@key.id}} class="button">
           Cancel
         </SecretLink>
       </div>
