--- a/ui/app/templates/vault/cluster/secrets/backend/list.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/list.hbs
@@ -14,7 +14,7 @@
         @mode="create"
         @type="add"
         @queryParams={{query-params initialKey=(or this.filter this.baseKey.id) itemType=this.tab}}
-        @data-test-secret-create={{true}}
+        data-test-secret-create={{true}}
       >
         Create Secret
       </ToolbarSecretLink>
@@ -78,7 +78,7 @@
             @mode="create"
             @type="add"
             @queryParams={{query-params initialKey=(or this.filter this.baseKey.id) itemType=this.tab}}
-            @data-test-secret-create={{true}}
+            data-test-secret-create={{true}}
           >
             {{options.create}}
           </ToolbarSecretLink>
@@ -138,7 +138,7 @@
               @mode="create"
               @secret=""
               @queryParams={{query-params initialKey=(or this.filter this.baseKey.id) itemType=this.tab}}
-              @class="link"
+              class="link"
             >
               {{options.create}}
             </SecretLink>
@@ -152,7 +152,7 @@
               @mode="create"
               @secret=""
               @queryParams={{query-params initialKey=(or this.filter this.baseKey.id) itemType=this.tab}}
-              @class="link"
+              class="link"
             >
               {{options.create}}
             </SecretLink>
