--- a/ui/app/templates/components/database-connection.hbs
+++ b/ui/app/templates/components/database-connection.hbs
@@ -64,13 +64,13 @@
             @mode="create"
             @type="add"
             @queryParams={{query-params initialKey=@model.name itemType="role"}}
-            @data-test-secret-create={{true}}
+            data-test-secret-create={{true}}
           >
             Add role
           </ToolbarSecretLink>
         {{/if}}
         {{#if @model.canEdit}}
-          <ToolbarSecretLink @secret={{@model.id}} @mode="edit" @data-test-edit-link={{true}} @replace={{true}}>
+          <ToolbarSecretLink @secret={{@model.id}} @mode="edit" data-test-edit-link={{true}} @replace={{true}}>
             Edit configuration
           </ToolbarSecretLink>
         {{/if}}
@@ -167,7 +167,7 @@
           </button>
         </div>
         <div class="control">
-          <SecretLink @mode="list" @class="button">
+          <SecretLink @mode="list" class="button">
             Cancel
           </SecretLink>
         </div>
@@ -287,7 +287,7 @@
           </button>
         </div>
         <div class="control">
-          <SecretLink @mode="list" @class="button">
+          <SecretLink @mode="list" class="button">
             Cancel
           </SecretLink>
         </div>
