--- a/ui/app/templates/components/secret-list/transform-transformation-item.hbs
+++ b/ui/app/templates/components/secret-list/transform-transformation-item.hbs
@@ -14,7 +14,7 @@
           @mode="show"
           @secret={{@item.id}}
           @queryParams={{if (eq @backendModel.type "transform") (query-params tab="actions") ""}}
-          @class="has-text-black has-text-weight-semibold"
+          class="has-text-black has-text-weight-semibold"
         >
           <Icon @name="file" class="has-text-grey-light" />
           {{if (eq @item.id " ") "(self)" (or @item.keyWithoutParent @item.id)}}
@@ -34,14 +34,14 @@
                 {{else}}
                   {{#if @item.updatePath.canRead}}
                     <li class="action">
-                      <SecretLink @mode="show" @secret={{@item.id}} @class="has-text-black has-text-weight-semibold">
+                      <SecretLink @mode="show" @secret={{@item.id}} class="has-text-black has-text-weight-semibold">
                         Details
                       </SecretLink>
                     </li>
                   {{/if}}
                   {{#if @item.updatePath.canUpdate}}
                     <li class="action">
-                      <SecretLink @mode="edit" @secret={{@item.id}} @class="has-text-black has-text-weight-semibold">
+                      <SecretLink @mode="edit" @secret={{@item.id}} class="has-text-black has-text-weight-semibold">
                         Edit
                       </SecretLink>
                     </li>
