--- a/ui/app/templates/components/transit-form-show.hbs
+++ b/ui/app/templates/components/transit-form-show.hbs
@@ -7,7 +7,7 @@
           @mode="show"
           @replace={{true}}
           @queryParams={{query-params tab="actions"}}
-          @data-test-transit-key-actions-link={{true}}
+          data-test-transit-key-actions-link={{true}}
         >
           Key Actions
         </SecretLink>
@@ -19,7 +19,7 @@
           @mode="show"
           @replace={{true}}
           @queryParams={{query-params tab="details"}}
-          @data-test-transit-link="details"
+          data-test-transit-link="details"
         >
           Details
         </SecretLink>
@@ -31,7 +31,7 @@
           @mode="show"
           @replace={{true}}
           @queryParams={{query-params tab="versions"}}
-          @data-test-transit-link="versions"
+          data-test-transit-link="versions"
         >
           Versions
         </SecretLink>
