--- a/ui/app/templates/vault/cluster/secrets/backend/overview.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/overview.hbs
@@ -15,8 +15,8 @@
           @mode="create"
           @secret=""
           @queryParams={{query-params initialKey=(or this.filter this.baseKey.id) itemType=this.tab}}
-          @class="link"
-          @data-test-secret-create="connections"
+          class="link"
+          data-test-secret-create="connections"
         >
           Connect a database
         </SecretLink>
