--- a/ui/app/templates/components/secret-list/database-list-item.hbs
+++ b/ui/app/templates/components/secret-list/database-list-item.hbs
@@ -2,8 +2,8 @@
   @params={{array "vault.cluster.secrets.backend.show" (if this.keyTypeValue (concat "role/" @item.id) @item.id)}}
   class="list-item-row"
   data-test-secret-link={{@item.id}}
-  encode={{true}}
-  queryParams={{secret-query-params @backendType @item.type}}
+  @encode={{true}}
+  @queryParams={{secret-query-params @backendType @item.type}}
 >
   <div class="columns is-mobile">
     <div class="column is-10">
