--- a/ui/app/templates/components/secret-list/item.hbs
+++ b/ui/app/templates/components/secret-list/item.hbs
@@ -1,11 +1,13 @@
-{{#linked-block
-  (concat "vault.cluster.secrets.backend." (if @item.isFolder "list" "show") (unless @item.id "-root"))
-  @item.id
+<LinkedBlock
+  @params={{array
+    (concat "vault.cluster.secrets.backend." (if @item.isFolder "list" "show") (unless @item.id "-root"))
+    @item.id
+  }}
   class="list-item-row"
-  data-test-secret-link=@item.id
-  encode=true
-  queryParams=(secret-query-params @backendModel.type)
-}}
+  data-test-secret-link={{@item.id}}
+  @encode={{true}}
+  @queryParams={{secret-query-params @backendModel.type}}
+>
   <div class="columns is-mobile">
     <div class="column is-10">
       <SecretLink
@@ -78,4 +80,4 @@
       </PopupMenu>
     </div>
   </div>
-{{/linked-block}}
+</LinkedBlock>
