--- a/ui/app/templates/components/secret-list/ssh-role-item.hbs
+++ b/ui/app/templates/components/secret-list/ssh-role-item.hbs
@@ -1,10 +1,12 @@
-{{#linked-block
-  (concat "vault.cluster.secrets.backend." (if (eq @item.keyType "ca") "sign" "credentials") (unless @item.id "-root"))
-  @item.id
+<LinkedBlock
+  @params={{array
+    (concat "vault.cluster.secrets.backend." (if (eq @item.keyType "ca") "sign" "credentials") (unless @item.id "-root"))
+    @item.id
+  }}
   class="list-item-row"
-  data-test-secret-link=@item.id
-  encode=true
-}}
+  data-test-secret-link={{@item.id}}
+  @encode={{true}}
+>
   <div class="columns is-mobile">
     <div class="column is-10">
       <LinkTo
@@ -134,4 +136,4 @@
       {{/if}}
     </div>
   </div>
-{{/linked-block}}
+</LinkedBlock>
