--- a/ui/app/templates/components/secret-list/transform-list-item.hbs
+++ b/ui/app/templates/components/secret-list/transform-list-item.hbs
@@ -1,12 +1,11 @@
 {{#if (and @item.updatePath.canRead (not this.isBuiltin))}}
-  {{#linked-block
-    "vault.cluster.secrets.backend.show"
-    @itemPath
+  <LinkedBlock
+    @params={{array "vault.cluster.secrets.backend.show" @itemPath}}
     class="list-item-row"
-    data-test-secret-link=@itemPath
-    encode=true
-    queryParams=(secret-query-params @backendType)
-  }}
+    data-test-secret-link={{@itemPath}}
+    @encode={{true}}
+    @queryParams={{secret-query-params @backendType}}
+  >
     <div class="columns is-mobile">
       <div class="column is-10">
         <SecretLink
@@ -44,7 +43,7 @@
         {{/if}}
       </div>
     </div>
-  {{/linked-block}}
+  </LinkedBlock>
 {{else}}
   <div class="list-item-row" data-test-view-only-list-item>
     <div class="columns is-mobile">
