--- a/ui/app/templates/components/secret-list/transform-transformation-item.hbs
+++ b/ui/app/templates/components/secret-list/transform-transformation-item.hbs
@@ -1,13 +1,12 @@
 {{! CBS TODO do not let click if !canRead }}
 {{#if (eq @options.item "transformation")}}
-  {{#linked-block
-    "vault.cluster.secrets.backend.show"
-    @item.id
+  <LinkedBlock
+    @params={{array "vault.cluster.secrets.backend.show" @item.id}}
     class="list-item-row"
-    data-test-secret-link=@item.id
-    encode=true
-    queryParams=(secret-query-params @backendModel.type)
-  }}
+    data-test-secret-link={{@item.id}}
+    @encode={{true}}
+    @queryParams={{secret-query-params @backendModel.type}}
+  >
     <div class="columns is-mobile">
       <div class="column is-10">
         <SecretLink
@@ -53,7 +52,7 @@
         {{/if}}
       </div>
     </div>
-  {{/linked-block}}
+  </LinkedBlock>
 {{else}}
   <div class="list-item-row">
     <div class="columns is-mobile">
