glimmerizes toggle-button component

--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -112,11 +112,11 @@
     {{! must have UPDATE permissions to add secret metadata. Create only will not work }}
     {{#if (and @isV2 @canUpdateSecretMetadata)}}
       <ToggleButton
-        @class="is-block"
-        @toggleAttr={{"showMetadata"}}
-        @toggleTarget={{this}}
+        @isOpen={{this.showMetadata}}
         @openLabel="Hide secret metadata"
         @closedLabel="Show secret metadata"
+        @onClick={{fn (mut this.showData)}}
+        class="is-block"
         data-test-show-metadata-toggle
       />
       {{#if this.showMetadata}}
