--- a/ui/app/templates/vault/cluster/secrets/backend/sign.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/sign.hbs
@@ -95,13 +95,7 @@
             @codemirrorUpdated={{action "codemirrorUpdated" attr.name}}
           />
         {{/each}}
-        <ToggleButton
-          @toggleAttr="showOptions"
-          @toggleTarget={{this}}
-          @openLabel="Hide options"
-          @closedLabel="More options"
-          data-test-toggle-button
-        />
+        <ToggleButton @isOpen={{this.showOptions}} @onClick={{fn (mut this.showOptions)}} data-test-toggle-button />
         {{#if this.showOptions}}
           <div class="box is-marginless">
             {{#each (drop 1 this.model.attrs) as |attr|}}
