--- a/ui/lib/replication/addon/templates/components/replication-summary.hbs
+++ b/ui/lib/replication/addon/templates/components/replication-summary.hbs
@@ -188,11 +188,11 @@
           }}
             <div class="has-text-danger">
               <ToggleButton
-                @toggleTarget={{this}}
-                @toggleAttr="showExplanation"
+                @isOpen={{this.showExplanation}}
                 @openLabel="Disable Performance Replication in order to enable this cluster as a DR secondary."
                 @closedLabel="Disable Performance Replication in order to enable this cluster as a DR secondary."
-                @class="has-text-danger"
+                @onClick={{fn (mut this.showExplanation)}}
+                class="has-text-danger"
               />
               {{#if this.showExplanation}}
                 <p>
