fixes remaining test selector issues

--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -115,7 +115,7 @@
         @isOpen={{this.showMetadata}}
         @openLabel="Hide secret metadata"
         @closedLabel="Show secret metadata"
-        @onClick={{fn (mut this.showData)}}
+        @onClick={{fn (mut this.showMetadata)}}
         class="is-block"
         data-test-show-metadata-toggle
       />
