--- a/ui/app/templates/components/secret-edit-toolbar.hbs
+++ b/ui/app/templates/components/secret-edit-toolbar.hbs
@@ -16,6 +16,7 @@
   {{/unless}}
   <ToolbarActions>
     {{#if (eq @mode "show")}}
+      here
       <SecretDeleteMenu
         @modelForData={{@modelForData}}
         @model={{@model}}
