--- a/ui/app/templates/components/secret-edit.hbs
+++ b/ui/app/templates/components/secret-edit.hbs
@@ -1,38 +1,38 @@
 <PageHeader as |p|>
   <p.top>
     <KeyValueHeader
-      @baseKey={{this.baseKey}}
+      @baseKey={{@baseKey}}
       @path="vault.cluster.secrets.backend.list"
-      @mode={{this.mode}}
-      @root={{this.root}}
+      @mode={{@mode}}
+      @root={{@root}}
       @showCurrent={{true}}
     />
   </p.top>
   <p.levelLeft>
     <h1 class="title is-3">
-      {{#if (eq this.mode "create")}}
+      {{#if (eq @mode "create")}}
         Create secret
-      {{else if (and this.isV2 (eq this.mode "edit"))}}
+      {{else if (and @isV2 (eq @mode "edit"))}}
         Create new version
-      {{else if (eq this.mode "edit")}}
+      {{else if (eq @mode "edit")}}
         Edit secret
       {{else}}
-        {{this.key.id}}
+        {{@key.id}}
       {{/if}}
     </h1>
   </p.levelLeft>
 </PageHeader>
 {{! tabs for show only }}
-{{#if (eq this.mode "show")}}
+{{#if (eq @mode "show")}}
   <div class="tabs-container box is-bottomless is-marginless is-fullwidth is-paddingless">
     <nav class="tabs">
       <ul>
-        <LinkTo @route="vault.cluster.secrets.backend.show" @model={{this.key.id}} data-test-secret-tab>
+        <LinkTo @route="vault.cluster.secrets.backend.show" @model={{@key.id}} data-test-secret-tab>
           Secret
         </LinkTo>
         {{! must have read access to /metadata see tab or update to update metadata}}
         {{#if (or this.canReadSecretMetadata this.canUpdateSecretMetadata)}}
-          <LinkTo @route="vault.cluster.secrets.backend.metadata" @model={{this.key.id}} data-test-secret-metadata-tab>
+          <LinkTo @route="vault.cluster.secrets.backend.metadata" @model={{@key.id}} data-test-secret-metadata-tab>
             Metadata
           </LinkTo>
         {{/if}}
@@ -42,9 +42,9 @@
 {{/if}}
 
 <SecretEditToolbar
-  @mode={{this.mode}}
-  @model={{this.model}}
-  @isV2={{this.isV2}}
+  @mode={{@mode}}
+  @model={{@model}}
+  @isV2={{@isV2}}
   @isWriteWithoutRead={{this.isWriteWithoutRead}}
   @secretDataIsAdvanced={{this.secretDataIsAdvanced}}
   @showAdvancedMode={{this.showAdvancedMode}}
@@ -56,14 +56,14 @@
   @editActions={{hash toggleAdvanced=(action "toggleAdvanced") refresh=(action "refresh")}}
 />
 
-{{#if (or (eq this.mode "create") (eq this.mode "edit"))}}
+{{#if (or (eq @mode "create") (eq @mode "edit"))}}
   <SecretCreateOrUpdate
-    @mode={{this.mode}}
-    @model={{this.model}}
+    @mode={{@mode}}
+    @model={{@model}}
     @showAdvancedMode={{this.showAdvancedMode}}
     @modelForData={{this.modelForData}}
     @error={{this.error}}
-    @isV2={{this.isV2}}
+    @isV2={{@isV2}}
     @secretData={{this.secretData}}
     @buttonDisabled={{this.buttonDisabled}}
     @canUpdateSecretMetadata={{this.canUpdateSecretMetadata}}
@@ -72,7 +72,7 @@
   />
 {{else if (eq this.mode "show")}}
   <SecretFormShow
-    @isV2={{this.isV2}}
+    @isV2={{@isV2}}
     @modelForData={{this.modelForData}}
     @isWriteWithoutRead={{this.isWriteWithoutRead}}
     @showAdvancedMode={{this.showAdvancedMode}}
