--- a/ui/app/templates/components/secret-edit-toolbar.hbs
+++ b/ui/app/templates/components/secret-edit-toolbar.hbs
@@ -16,11 +16,10 @@
   {{/unless}}
   <ToolbarActions>
     {{#if (eq @mode "show")}}
-      here
       <SecretDeleteMenu
         @modelForData={{@modelForData}}
         @model={{@model}}
-        @navToNearestAncestor={{@navToNearestAncestor}}
+        {{!-- @navToNearestAncestor={{@navToNearestAncestor}} --}}
         @isV2={{@isV2}}
         @refresh={{action @editActions.refresh}}
         @canReadSecretMetadata={{@canReadSecretMetadata}}
