--- a/ui/app/templates/components/secret-edit.hbs
+++ b/ui/app/templates/components/secret-edit.hbs
@@ -12,7 +12,7 @@
     <h1 class="title is-3">
       {{#if (eq @mode "create")}}
         Create secret
-      {{else if (and @isV2 (eq @mode "edit"))}}
+      {{else if (and this.isV2 (eq @mode "edit"))}}
         Create new version
       {{else if (eq @mode "edit")}}
         Edit secret
@@ -40,11 +40,10 @@
     </nav>
   </div>
 {{/if}}
-
 <SecretEditToolbar
   @mode={{@mode}}
   @model={{@model}}
-  @isV2={{@isV2}}
+  @isV2={{this.isV2}}
   @isWriteWithoutRead={{this.isWriteWithoutRead}}
   @secretDataIsAdvanced={{this.secretDataIsAdvanced}}
   @showAdvancedMode={{this.showAdvancedMode}}
@@ -53,7 +52,7 @@
   @canUpdateSecretData={{this.canUpdateSecretData}}
   @canReadSecretMetadata={{this.canReadSecretMetadata}}
   @codemirrorString={{this.codemirrorString}}
-  @editActions={{hash toggleAdvanced=(action "toggleAdvanced") refresh=(action "refresh")}}
+  @editActions={{hash toggleAdvanced=this.toggleAdvanced refresh=this.refresh}}
 />
 
 {{#if (or (eq @mode "create") (eq @mode "edit"))}}
@@ -63,16 +62,16 @@
     @showAdvancedMode={{this.showAdvancedMode}}
     @modelForData={{this.modelForData}}
     @error={{this.error}}
-    @isV2={{@isV2}}
+    @isV2={{this.isV2}}
     @secretData={{this.secretData}}
     @buttonDisabled={{this.buttonDisabled}}
     @canUpdateSecretMetadata={{this.canUpdateSecretMetadata}}
     @canReadSecretData={{this.canReadSecretData}}
     @canReadSecretMetadata={{this.canReadSecretMetadata}}
   />
-{{else if (eq this.mode "show")}}
+{{else if (eq @mode "show")}}
   <SecretFormShow
-    @isV2={{@isV2}}
+    @isV2={{this.isV2}}
     @modelForData={{this.modelForData}}
     @isWriteWithoutRead={{this.isWriteWithoutRead}}
     @showAdvancedMode={{this.showAdvancedMode}}
