--- a/ui/app/templates/components/secret-edit.hbs
+++ b/ui/app/templates/components/secret-edit.hbs
@@ -52,7 +52,7 @@
   @canUpdateSecretData={{this.canUpdateSecretData}}
   @canReadSecretMetadata={{this.canReadSecretMetadata}}
   @codemirrorString={{this.codemirrorString}}
-  @editActions={{hash toggleAdvanced=this.toggleAdvanced refresh=this.refresh}}
+  @editActions={{hash toggleAdvanced=(action "toggleAdvanced") refresh=(action "refresh")}}
 />
 
 {{#if (or (eq @mode "create") (eq @mode "edit"))}}
