--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -112,11 +112,11 @@
     {{! must have UPDATE permissions to add secret metadata. Create only will not work }}
     {{#if (and @isV2 @canUpdateSecretMetadata)}}
       <ToggleButton
-        @class="is-block"
-        @toggleAttr={{"showMetadata"}}
-        @toggleTarget={{this}}
+        @isOpen={{this.showMetadata}}
         @openLabel="Hide secret metadata"
         @closedLabel="Show secret metadata"
+        @onClick={{fn (mut this.showMetadata)}}
+        class="is-block"
         data-test-show-metadata-toggle
       />
       {{#if this.showMetadata}}
@@ -139,7 +139,7 @@
         </button>
       </div>
       <div class="control">
-        <SecretLink @mode="list" @secret={{@model.parentKey}} @class="button">
+        <SecretLink @mode="list" @secret={{@model.parentKey}} class="button">
           Cancel
         </SecretLink>
       </div>
