wire up running total component

--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -131,6 +131,13 @@
         <LayoutLoading />
       {{else}}
         {{#if this.totalUsageCounts}}
+          <Clients::RunningTotal
+            @chartLegend={{this.chartLegend}}
+            @barChartData={{this.byMonthNewClients}}
+            @lineChartData={{this.byMonthTotalClients}}
+            @runningTotals={{this.totalUsageCounts}}
+            @timestamp={{this.responseTimestamp}}
+          />
           <Clients::UsageStats @title="Total usage" @totalUsageCounts={{this.totalUsageCounts}} />
           {{#if this.hasAttributionData}}
             <Clients::Attribution
