Add the possibility to set the mount path for login in query params
This patch adds the possibility to set the mount path used for logging
in the UI using query params. When the mount path is given that way the
drawer is already open on page load.

--- a/ui/app/templates/vault/cluster/auth.hbs
+++ b/ui/app/templates/vault/cluster/auth.hbs
@@ -108,6 +108,7 @@
         @redirectTo={{this.redirectTo}}
         @selectedAuth={{this.authMethod}}
         @onSuccess={{action "onAuthResponse"}}
+        @customPath={{this.mountPath}}
       />
     {{/if}}
   </Page.content>
