--- a/ui/app/styles/core/charts.scss
+++ b/ui/app/styles/core/charts.scss
@@ -32,7 +32,7 @@
   box-shadow: inset 0 -1px 0 $vault-gray-200;
 
   > h2 {
-    padding-bottom: $spacing-xs;
+    padding-bottom: $spacing-xxs;
   }
 }
 
@@ -165,7 +165,7 @@ h2.chart-title {
   font-weight: $font-weight-bold;
   font-size: $size-5;
   line-height: $spacing-l;
-  margin-bottom: $spacing-xs;
+  margin-bottom: $spacing-xxs;
 }
 
 p.chart-description {
