--- a/ui/app/templates/components/clients/running-total.hbs
+++ b/ui/app/templates/components/clients/running-total.hbs
@@ -15,23 +15,18 @@
       <h2 class="chart-title">Running client total</h2>
       <p class="chart-subtext">The number of clients which interacted with Vault during this date range. </p>
     </div>
-
     <div class="data-details-top">
-      {{#let (get this.getTotalClients 0) as |stat|}}
-        <h3 class="data-details">Entity clients</h3>
-        <p class="data-details">
-          {{format-number stat.total}}
-        </p>
-      {{/let}}
+      <h3 class="data-details">Entity clients</h3>
+      <p class="data-details">
+        {{format-number (get this.getEntityClientData "runningTotal")}}
+      </p>
     </div>
 
     <div class="data-details-bottom">
-      {{#let (get this.getTotalClients 1) as |stat|}}
-        <h3 class="data-details">Non-entity clients</h3>
-        <p class="data-details">
-          {{format-number stat.total}}
-        </p>
-      {{/let}}
+      <h3 class="data-details">Non-entity clients</h3>
+      <p class="data-details">
+        {{format-number (get this.getNonEntityClientData "runningTotal")}}
+      </p>
     </div>
 
     <div class="legend-right">
@@ -53,21 +48,17 @@
     </div>
 
     <div class="data-details-top">
-      {{#let (get this.getAverageNewClients 0) as |stat|}}
-        <h3 class="data-details">Average new entity clients per month</h3>
-        <p class="data-details">
-          {{format-number stat.average}}
-        </p>
-      {{/let}}
+      <h3 class="data-details">Average new entity clients per month</h3>
+      <p class="data-details">
+        {{format-number (get this.getEntityClientData "averageNewClients")}}
+      </p>
     </div>
 
     <div class="data-details-bottom">
-      {{#let (get this.getAverageNewClients 1) as |stat|}}
-        <h3 class="data-details">Average new non-entity clients per month</h3>
-        <p class="data-details">
-          {{format-number stat.average}}
-        </p>
-      {{/let}}
+      <h3 class="data-details">Average new non-entity clients per month</h3>
+      <p class="data-details">
+        {{format-number (get this.getNonEntityClientData "averageNewClients")}}
+      </p>
     </div>
 
     <div class="timestamp">
