--- a/ui/app/templates/components/clients/monthly-usage.hbs
+++ b/ui/app/templates/components/clients/monthly-usage.hbs
@@ -13,7 +13,7 @@
   <div class="chart-subTitle">
     <h2 class="chart-title">Total monthly clients</h2>
     <p class="chart-subtext">
-      Each unique client is counted once per month. This can help with capacity planning.
+      Each client is counted once per month. This can help with capacity planning.
     </p>
   </div>
 
