--- a/ui/app/templates/components/keymgmt/provider-edit.hbs
+++ b/ui/app/templates/components/keymgmt/provider-edit.hbs
@@ -23,7 +23,7 @@
             Details
           </LinkTo>
         </li>
-        <li role="button" class={{if this.viewingKeys "is-active"}} data-test-kms-provider-tab="keys">
+        <li class={{if this.viewingKeys "is-active"}} data-test-kms-provider-tab="keys">
           <LinkTo @route="vault.cluster.secrets.backend.show" @model={{@model.id}} @query={{hash tab="keys"}}>
             Keys
           </LinkTo>
@@ -103,7 +103,7 @@
         <button
           type="submit"
           disabled={{this.saveTask.isRunning}}
-          class="button is-primary {{if this.saveTask.isRunning "is-loading"}}"
+          class="button is-primary {{if this.saveTask.isRunning 'is-loading'}}"
           data-test-kms-provider-submit
         >
           {{if this.isCreating "Create provider" "Update"}}
