--- a/ui/app/templates/components/keymgmt/key-edit.hbs
+++ b/ui/app/templates/components/keymgmt/key-edit.hbs
@@ -19,32 +19,26 @@
   <div class="tabs-container box is-sideless is-fullwidth is-paddingless is-marginless" data-test-keymgmt-key-toolbar>
     <nav class="tabs">
       <ul>
-        <LinkTo
-          @route="vault.cluster.secrets.backend.show"
-          @model={{@model.id}}
-          {{! template-lint-disable no-unknown-arguments-for-builtin-components }}
-          @tagName="li"
-          @query={{hash tab=""}}
-          @activeClass={{if (not-eq @tab "versions") "is-active"}}
-          data-test-tab="Details"
-        >
-          <LinkTo @route="vault.cluster.secrets.backend.show" @model={{@model.id}} @query={{hash tab=""}}>
+        <li class={{if (not-eq @tab "versions") "is-active"}}>
+          <LinkTo
+            @route="vault.cluster.secrets.backend.show"
+            @model={{@model.id}}
+            @query={{hash tab=""}}
+            data-test-tab="Details"
+          >
             Details
           </LinkTo>
-        </LinkTo>
-        <LinkTo
-          @route="vault.cluster.secrets.backend.show"
-          @model={{@model.id}}
-          @query={{hash tab="versions"}}
-          {{! template-lint-disable no-unknown-arguments-for-builtin-components }}
-          @tagName="li"
-          @activeClass={{if (eq @tab "versions") "is-active"}}
-          data-test-tab="Versions"
-        >
-          <LinkTo @route="vault.cluster.secrets.backend.show" @model={{@model.id}} @query={{hash tab="versions"}}>
+        </li>
+        <li class={{if (eq @tab "versions") "is-active"}}>
+          <LinkTo
+            @route="vault.cluster.secrets.backend.show"
+            @model={{@model.id}}
+            @query={{hash tab="versions"}}
+            data-test-tab="Versions"
+          >
             Versions
           </LinkTo>
-        </LinkTo>
+        </li>
       </ul>
     </nav>
   </div>
@@ -141,7 +135,7 @@
     {{/each}}
   </div>
   <div class="has-top-margin-xl has-bottom-margin-s">
-    <h2 class="title has-border-bottom-light is-5 {{if @model.provider.permissionsError "is-borderless is-marginless"}}">
+    <h2 class="title has-border-bottom-light is-5 {{if @model.provider.permissionsError 'is-borderless is-marginless'}}">
       Distribution Details
     </h2>
     {{! TODO: Use capabilities to tell if it's not distributed vs no permissions }}
