update todos and address comments

--- a/ui/app/templates/components/clients/attribution.hbs
+++ b/ui/app/templates/components/clients/attribution.hbs
@@ -9,7 +9,7 @@
       <p class="chart-description" data-test-attribution-description>{{this.chartText.description}}</p>
     </div>
     <div class="header-right">
-      {{#if this.totalClientsData}}
+      {{#if this.hasCsvData}}
         <button
           data-test-attribution-export-button
           type="button"
