--- a/ui/app/templates/components/clients/current.hbs
+++ b/ui/app/templates/components/clients/current.hbs
@@ -56,7 +56,12 @@
     </div>
     {{#if this.countsIncludeOlderData}}
       <AlertBanner @type="warning" @title="Warning">
-        {{concat "You upgraded to Vault " this.firstUpgradeVersion " on " (date-format this.upgradeDate "MMMM d, yyyy.")}}
+        {{concat
+          "You upgraded to Vault "
+          this.latestUpgradeData.id
+          " on "
+          (date-format this.latestUpgradeData.timestampInstalled "MMMM d, yyyy.")
+        }}
         How we count clients changed in 1.9, so please keep that in mind when looking at the data below, and you can
         <DocLink @path="/docs/concepts/client-count/faq#q-which-vault-version-reflects-the-most-accurate-client-counts">
           read more here.
