add upgrade indicator to line chart

--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -140,6 +140,7 @@
               @lineChartData={{this.byMonthTotalClients}}
               @barChartData={{this.byMonthNewClients}}
               @runningTotals={{this.totalUsageCounts}}
+              @upgradeData={{if this.countsIncludeOlderData this.latestUpgradeData}}
               @timestamp={{this.responseTimestamp}}
             />
           {{/if}}
