--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -112,16 +112,15 @@
             {{#if this.countsIncludeOlderData}}
               <li>
                 {{concat
-                  "You upgraded to Vault "
+                  "Vault was upgraded to "
                   this.latestUpgradeData.id
-                  " on "
-                  (date-format this.latestUpgradeData.timestampInstalled "MMMM d, yyyy.")
+                  " during this time range. How we count clients changed in 1.9, so keep that in mind when looking at the data below. "
                 }}
                 How we count clients changed in 1.9, so please keep that in mind when looking at the data below, and you can
                 <DocLink
                   @path="/docs/concepts/client-count/faq#q-which-vault-version-reflects-the-most-accurate-client-counts"
                 >
-                  read more here.
+                  Learn more here.
                 </DocLink>
               </li>
             {{/if}}
