--- a/ui/app/templates/components/clients/current.hbs
+++ b/ui/app/templates/components/clients/current.hbs
@@ -63,7 +63,7 @@
           (if
             (eq this.minorReleaseNumber 9)
             " this month. How we count clients changed in 1.9, so keep that in mind when looking at the data below. "
-            ". We added new client breakdowns for 1.10 attribution data only, so keep that in mind when looking at the data below."
+            " We added new client breakdowns for 1.10 attribution data only, so keep that in mind when looking at the data below. "
           )
         }}
         <DocLink @path="/docs/concepts/client-count/faq#q-which-vault-version-reflects-the-most-accurate-client-counts">
