--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -102,15 +102,17 @@
           </ToolbarFilters>
         </Toolbar>
       </div>
-      {{#if (or this.versionUpdateText this.responseRangeDiffMessage)}}
+
+      {{#if (or this.upgradeDuringActivity this.responseRangeDiffMessage)}}
         <AlertBanner @type="warning" @title="Warning">
           <ul class={{if (and this.versionUpdateText this.responseRangeDiffMessage) "bullet"}}>
             {{#if this.responseRangeDiffMessage}}
               <li>{{this.responseRangeDiffMessage}}</li>
             {{/if}}
-            {{#if this.versionUpdateText}}
+            {{#if this.upgradeDuringActivity}}
               <li>
-                {{this.versionUpdateText}}
+                {{this.upgradeVersionAndDate}}
+                {{this.versionSpecificText}}
                 <DocLink
                   @path="/docs/concepts/client-count/faq#q-which-vault-version-reflects-the-most-accurate-client-counts"
                 >
@@ -134,7 +136,7 @@
               @lineChartData={{this.byMonthTotalClients}}
               @barChartData={{this.byMonthNewClients}}
               @runningTotals={{this.totalUsageCounts}}
-              @upgradeData={{if this.countsIncludeOlderData this.latestUpgradeData}}
+              @upgradeData={{this.upgradeDuringActivity}}
               @timestamp={{this.responseTimestamp}}
             />
           {{/if}}
