--- a/ui/app/templates/vault/cluster/plugin/show.hbs
+++ b/ui/app/templates/vault/cluster/plugin/show.hbs
@@ -11,6 +11,9 @@
     <h1 class="title is-3">
       <Icon @name="box" @size="24" class="has-text-grey-light" />
       {{model.name}}
+      <span class="tag" data-test-kv-version-badge>
+        {{model.type}}
+      </span>
     </h1>
   </p.levelLeft>
 </PageHeader>
