--- a/ui/app/templates/components/keymgmt/key-edit.hbs
+++ b/ui/app/templates/components/keymgmt/key-edit.hbs
@@ -55,7 +55,7 @@
       </button>
       <ConfirmAction
         @buttonClasses="toolbar-link"
-        @onConfirmAction={{fn this.removeKey @model.id}}
+        @onConfirmAction={{this.removeKey}}
         @confirmTitle="Remove this key?"
         @confirmMessage="This will remove all versions of the key from the KMS provider. The key will stay in Vault."
         @confirmButtonText="Remove"
@@ -87,19 +87,39 @@
   </Toolbar>
 {{/if}}
 
-{{#if (eq this.mode "create")}}
-  <form {{on "submit" this.createKey}}>
-    {{#each @model.createFields as |attr|}}
-      <FormField @attr={{attr}} @model={{@model}} />
-    {{/each}}
-    <input type="submit" value="Create key" />
-  </form>
-{{else if (eq this.mode "edit")}}
-  <form {{on "submit" this.updateKey}}>
-    {{#each @model.updateFields as |attr|}}
-      <FormField data-test-field={{true}} @attr={{attr}} @model={{@model}} />
-    {{/each}}
-    <input type="submit" value="Update" />
+{{#if this.isMutable}}
+  <form {{on "submit" (perform this.saveKey)}}>
+    <div class="box is-sideless is-fullwidth is-marginless">
+      {{#let (if (eq @mode "create") "createFields" "updateFields") as |fieldsKey|}}
+        {{#each (get @model fieldsKey) as |attr|}}
+          <FormField data-test-field={{true}} @attr={{attr}} @model={{@model}} />
+        {{/each}}
+        <div class="field is-grouped box is-fullwidth is-bottomless">
+          <div class="control">
+            <button
+              type="submit"
+              disabled={{this.saveTask.isRunning}}
+              class="button is-primary {{if this.saveTask.isRunning 'is-loading'}}"
+              data-test-keymgmt-key-submit
+            >
+              {{if this.isCreating "Create key" "Update"}}
+            </button>
+          </div>
+          <div class="control">
+            <LinkTo
+              @route={{if this.isCreating @root.path "vault.cluster.secrets.backend.show"}}
+              @model={{if this.isCreating @root.model @model.id}}
+              @query={{unless this.isCreating (hash itemType="key")}}
+              @disabled={{this.savekey.isRunning}}
+              class="button"
+              data-test-keymgmt-key-cancel
+            >
+              Cancel
+            </LinkTo>
+          </div>
+        </div>
+      {{/let}}
+    </div>
   </form>
 {{else if (eq @tab "versions")}}
   {{#each @model.versions as |version|}}
@@ -135,11 +155,21 @@
     {{/each}}
   </div>
   <div class="has-top-margin-xl has-bottom-margin-s">
-    <h2 class="title has-border-bottom-light is-5 {{if @model.provider.permissionsError 'is-borderless is-marginless'}}">
+    <h2 class="title has-border-bottom-light is-5 {{unless @model.provider.canListKeys 'is-borderless is-marginless'}}">
       Distribution Details
     </h2>
-    {{! TODO: Use capabilities to tell if it's not distributed vs no permissions }}
-    {{#if @model.provider.permissionsError}}
+    {{#if (not @model.provider)}}
+      <EmptyState
+        @title="Key not distributed"
+        @message="When this key is distributed to a destination, those details will appear here."
+        data-test-keymgmt-dist-empty-state
+      >
+        {{! TODO: Distribute link
+        <LinkTo @route="vault.cluster.secrets.backend.distribute">
+        Distribute
+        </LinkTo> }}
+      </EmptyState>
+    {{else if (not @model.provider.canListKeys)}}
       <EmptyState
         @title="You are not authorized"
         @subTitle="Error 403"
@@ -152,7 +182,7 @@
         }}
         @icon="minus-circle"
       />
-    {{else if @model.provider}}
+    {{else}}
       <InfoTableRow @label="Distributed" @value={{@model.provider}}>
         <LinkTo @route="vault.cluster.secrets.backend.show" @model={{concat "kms/" @model.provider}}>
           <Icon @name="check-circle-fill" class="has-text-success" />{{@model.provider}}
@@ -181,17 +211,6 @@
           @icon="minus-circle"
         />
       {{/if}}
-    {{else}}
-      <EmptyState
-        @title="Key not distributed"
-        @message="When this key is distributed to a destination, those details will appear here."
-        data-test-keymgmt-dist-empty-state
-      >
-        {{! TODO: Distribute link
-        <LinkTo @route="vault.cluster.secrets.backend.distribute">
-        Distribute
-        </LinkTo> }}
-      </EmptyState>
     {{/if}}
   </div>
 {{/if}}
